packages/test-dev-server/tests/fixtures/invalidation/src/child.hmr-1.js
if (import.meta.hot) {
  import.meta.hot.accept((newExports) => {
    if (newExports.value === 'child-edited') {
      import.meta.hot.invalidate();
    }
  });
}

export const value = 'child-edited';
